Bytte lagring av producter i Warehouse från list till map,