@@ -6,10 +6,11 @@ import java.util.stream.Collectors;
 
 public class Warehouse {
     private static final Map<String, Warehouse> warehouse = new HashMap<>();
-    private final List<Product> products = new ArrayList<>();
+
+    private final Map<UUID,Product> products = new HashMap<>();
+    private final Set<Product> changedProducts = new HashSet<>();
 
     private final String name;
-
 
     private Warehouse (String name){
         this.name = name;
@@ -29,83 +30,74 @@ public class Warehouse {
         }
     }
 
-
     public void addProduct(Product product) {
         if (product == null){
             throw new IllegalArgumentException("Product cannot be null.");
         }
-        products.add(product);
-
+        products.put(product.uuid(),product);
     }
 
     public List<Product> getProducts() {
-        return List.copyOf(products);
+        return List.copyOf(products.values());
     }
 
     //getProductById(UUID): return Optional
     public Optional<Product> getProductById(UUID uuid) {
-        List<Product> products = getProducts();
-
-         return products.stream()
-                .filter(product -> product.uuid().equals(uuid))
-                .findFirst();
+        return Optional.ofNullable(products.get(uuid));
 
     }
 
     //Todo:Förstå korrekt och bygg om logiken själv!
     //shippableProducts(): return List from stored products
     public List<Shippable> shippableProducts() {
-        return products.stream()
+        return products.values().stream()
                 .filter(product -> product instanceof Shippable)
-                .map (product ->  (Shippable) product)
-                .toList();
+                .map(product -> (Shippable) product)
+                .collect(Collectors.toList());
 
     }
 
     //updateProductPrice(UUID, BigDecimal): when not found, throw NoSuchElementException("Product not found with id: ")
+    public void updateProductPrice() {
+
+        //Sök efter produkten
+        //Kasta undantag endast om produkten inte hittas
+        //Uppdatera priset och spåra produkten
+
+    }
+
+
     //Also track changed products in getChangedProducts()
-    public Map<UUID, BigDecimal> updateProductPrice() {
-
-
-        return null;
-
-
-
+    public List<Product> getChangedProducts() {
+        return List.copyOf(changedProducts);
     }
 
     //Todo: Returnerar just nu en tom lista!
     //expiredProducts(): return List that are expired
     public List<Perishable> expiredProducts() {
+        
         return List.of();
     }
 
     //remove(UUID): remove the matching product if present
     public void remove(UUID id) {
-        products.removeIf((product ->  product.uuid().equals(id)));
-
-
+        products.remove(id);
     }
 
     //Ensure Warehouse.clearProducts() is called in tests; do not share state between tests
     public void clearProducts() {
         products.clear();
-
     }
 
     public boolean isEmpty() {
-        return true;
+        return products.isEmpty();
     }
 
-    //Todo:Se över och bygg om logiken!
-    public Map<Category, List<Product>> getProductsGroupedByCategories() {
-        //Hämta vår lista
-        //Skapa vår stream
-        //Använd Collector, collect(), Collectors.groupingBy()
-        //Definiera vår nyckel med metodreferensen
-        //Returnera vår map
 
-        return getProducts().stream()
+    public Map<Category, List<Product>> getProductsGroupedByCategories() {
+        return products.values().stream()
                 .collect(Collectors.groupingBy(Product::category));
     }
+
 }
 
